--- a/resources/views/admin/components/notification.edge
+++ b/resources/views/admin/components/notification.edge
@@ -5,8 +5,10 @@
         aria-haspopup="true">
         @!svg.notification()
         <!-- Notification badge -->
+        @if(notificationsQty)
         <span aria-hidden="true"
             class="absolute top-0 right-0 inline-block w-3 h-3 transform translate-x-1 -translate-y-1 bg-red-600 border-2 border-white rounded-full dark:border-gray-800"></span>
+        @end
     </button>
     <template x-if="isOpen">
         <ul x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100"
@@ -15,28 +17,12 @@
             aria-label="submenu">
             <li class="flex">
                 <a class="inline-flex items-center justify-between w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
-                    href="#">
-                    <span>Messages</span>
+                    href="{{ route('admin_notifications.index') }}">
+                    <span>Notificações</span>
                     <span
                         class="inline-flex items-center justify-center px-2 py-1 text-xs font-bold leading-none text-red-600 bg-red-100 rounded-full dark:text-red-100 dark:bg-red-600">
-                        13
+                        {{notificationsQty}}
                     </span>
-                </a>
-            </li>
-            <li class="flex">
-                <a class="inline-flex items-center justify-between w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
-                    href="#">
-                    <span>Sales</span>
-                    <span
-                        class="inline-flex items-center justify-center px-2 py-1 text-xs font-bold leading-none text-red-600 bg-red-100 rounded-full dark:text-red-100 dark:bg-red-600">
-                        2
-                    </span>
-                </a>
-            </li>
-            <li class="flex">
-                <a class="inline-flex items-center justify-between w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
-                    href="#">
-                    <span>Alerts</span>
                 </a>
             </li>
         </ul>
